--- a/snippets/store-language.liquid
+++ b/snippets/store-language.liquid
@@ -26,3 +26,23 @@
         {%- endif -%}
     {%- endform -%}
 {%- endif -%}
+
+
+
+
+
+
+
+<!-- <div class="locale-selectors__container" style="background-color: rgb(246, 246, 246);">
+    <div class="locale-selectors__content" style="max-width: 1200px; margin-left: 51px; margin-right: 51px; padding-left: 55px; padding-right: 55px;">
+        <form action="/localization" method="POST">
+            <input name="_method" type="hidden" value="PUT">
+            <input name="source" type="hidden" value="geolocation_selector">
+            <input name="return_to" type="hidden" value="/hi">
+            <select class="locale-selectors__selector" name="locale_code">
+                <option value="en">English</option>
+                <option value="hi">हिन्दी</option>
+            </select>
+        </form>
+    </div>
+</div> -->
